--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciudad de Mascotas</title>
 </head>
-<h1>Tienda Ciudad de Mascotas</h1>
+<h1>Ciudad de Mascotas</h1>
 <body>
-    
+    <h1>Tienda de mascotas </h1>
 </body>
 </html>
