--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciudad de Mascotas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="index.css">
+    <title>Tienda de Mascotas</title>
 </head>
-<h1>Ciudad de Mascotas</h1>
 <body>
-    <h1>Tienda de mascotas </h1>
+    <header>
+        <h1>Tienda Ciudad de Mascotas</h1>
+    </header>
+    <section class="contenedor">
+        <!--Contenedor de los elementos-->
+        <div class="contenedor-items">
+            <div class="item">
+                <span class="titulo-item">Alimento para perros Pedigree Adulto 7Kg</span>
+                <img src="img/ComidaparaPerroPedigreeAdulto.webp" alt="" class="img-item">
+                <span class="precio-item">$68.900</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Alimento para perros Dog Chow 100g</span>
+                <img src="img/AlimentoParaPerroDog Chow100g.webp" alt="" class="img-item">
+                <span class="precio-item">$3.500</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Alimento para gatos Mirringo 1kg</span>
+                <img src="img/comidaParaGatosMirring.webp" alt="" class="img-item">
+                <span class="precio-item">$13.800</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Comida para Gato Whiskas 3kg</span>
+                <img src="img/AlimentoWhiskasParaGatosCarne3kg.webp" alt="" class="img-item">
+                <span class="precio-item">$73.650</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Comida para peces Incros 1kg</span>
+                <img src="img/ComidaParaPecesIncros1kg.webp" alt="" class="img-item">
+                <span class="precio-item">$154.100</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+            <div class="item">
+                <span class="titulo-item">Comida para peces Vipan Nature 4kg</span>
+                <img src="img/ComidaParaPecesVipan4kg.webp" alt="" class="img-item">
+                <span class="precio-item">$523.100</span>
+                <button class="boton-item">Agregrar al carrito</button>
+            </div>
+        </div>
+        <!--carrito de compras-->
+        <div class="carrito">
+            <div class="header-carrito">
+                <h2>Tu carrito</h2>
+            </div>
+
+            <div class="carrito-items">
+                <div class="carrito-item">
+                    <img src="img/ComidaparaPerroPedigreeAdulto.webp" alt="" width="80px">
+                    <div class="carrito-item-detalles">
+                        <span class="carrito-item-titulo">Alimento para perro Pedigree 7Kg</span>
+                        <div class="selector-cantidad">
+                            <i class="fa-solid fa-minus restar-cantidad"></i>
+                            <input type="text" value="1" class="carrito-item-cantidad" disabled>
+                            <i class="fa-solid fa-plus sumar-cantidad"></i>
+                        </div>
+                        <span class="carrito-item-precio">$68.900</span>
+                    </div>
+                    <span class="btn-eliminar">
+                        <i class="fa-solid fa-trash"></i>
+                    </span>
+                </div>
+                <div class="carrito-item">
+                    <img src="img/AlimentoParaPerroDog Chow100g.webp" alt="" width="80px">
+                    <div class="carrito-item-detalles">
+                        <span class="carrito-item-titulo">Alimento para perro Dog Chow 3kg</span>
+                        <div class="selector-cantidad">
+                            <i class="fa-solid fa-minus restar-cantidad"></i>
+                            <input type="text" value="2" class="carrito-item-cantidad" disabled>
+                            <i class="fa-solid fa-plus sumar-cantidad"></i>
+                        </div>
+                        <span class="carrito-item-precio">$4.500</span>
+                    </div>
+                    <span class="btn-eliminar">
+                        <i class="fa-solid fa-trash"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="carrito-total">
+                <div class="fila">
+                    <strong>Tu Total</strong>
+                    <span class="carrito-precio-total">
+                        120.000,00
+                    </span>
+                </div>
+                <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
+
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
