--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!--INTEGRANTES:
 Karen Dayana Fuentes Mendoza
-Cesar Luis Alean Hernandez-->
+Cesar Luis Alean Hernandez
+
+https://github.com/KarenF6/Tienda-de-Mascotas
+
+-->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
